// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Tree.Item checkGrammar=false 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item checkGrammar=true 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item checkHighlight=false 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item checkHighlight=true 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item checkSpaces=false 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item checkSpaces=true 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item className="my-classname" 1`] = `
<li
  className="uu5-bricks-tree-item my-classname"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item content="This is Content from ContentMixin" 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Link
      className="uu5-bricks-tree-item-link"
      onClick={[Function]}
    >
      <Icon
        className="uu5-bricks-tree-item-icon"
        icon="mdi-menu-right"
      />
    </Link>
     
    <Span />
  </Div>
  <tree-list
    content="This is Content from ContentMixin"
    hidden={true}
  />
</li>
`;

exports[`UU5.Bricks.Tree.Item content=12345 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Link
      className="uu5-bricks-tree-item-link"
      onClick={[Function]}
    >
      <Icon
        className="uu5-bricks-tree-item-icon"
        icon="mdi-menu-right"
      />
    </Link>
     
    <Span />
  </Div>
  <tree-list
    content={12345}
    hidden={true}
  />
</li>
`;

exports[`UU5.Bricks.Tree.Item controlled=false 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item controlled=true 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item default props 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item disabled=false 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item disabled=true 1`] = `
<li
  className="uu5-bricks-tree-item uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</li>
`;

exports[`UU5.Bricks.Tree.Item docKit examples UU5.Bricks.Tree.Item should render without crash 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-xl"
  id="idROT-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="uuID01"
    key=".0"
    label="Movies"
  >
    <TreeItem
      id="uuID02"
      label="Comedies"
    >
      <TreeItem
        id="uuID03"
        label="Anchorman"
      />
      <TreeItem
        id="uuID04"
        label="Yesman"
      />
    </TreeItem>
  </TreeItem>
</tree-list>
`;

exports[`UU5.Bricks.Tree.Item dynamic=false 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item dynamic=true 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item expanded=false 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item expanded=true 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item hidden=false 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item hidden=true 1`] = `
<li
  className="uu5-bricks-tree-item uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item iconCollapsed="uu5-plus" 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item iconExpanded="uu5-calendar" 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item id="myId" 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="myId"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item ignoreHTML=false 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item ignoreHTML=true 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item items=[{"label":"Item 1","items":[{"label":"Item 1.1"}]},{"label":"Item 2","items":[{"label":"Item 2.1"}]}] 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Link
      className="uu5-bricks-tree-item-link"
      onClick={[Function]}
    >
      <Icon
        className="uu5-bricks-tree-item-icon"
        icon="mdi-menu-right"
      />
    </Link>
     
    <Span />
  </Div>
  <tree-list
    hidden={true}
    items={
      Array [
        Object {
          "items": Array [
            Object {
              "label": "Item 1.1",
            },
          ],
          "label": "Item 1",
        },
        Object {
          "items": Array [
            Object {
              "label": "Item 2.1",
            },
          ],
          "label": "Item 2",
        },
      ]
    }
  />
</li>
`;

exports[`UU5.Bricks.Tree.Item label="Tree items label" 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span
      content="Tree items label"
    />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item mainAttrs=undefined 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item name="myName" 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item nestingLevel="bigBox" 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item nestingLevel="bigBoxCollection" 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item nestingLevel="box" 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item nestingLevel="boxCollection" 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item nestingLevel="container" 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Tree.Item nestingLevel="page" 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item nestingLevel="smallBox" 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item nestingLevel="smallBoxCollection" 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item nestingLevel="spa" 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item noIndex=false 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item noIndex=true 1`] = `
<li
  className="uu5-bricks-tree-item uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item pureRender=false 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item pureRender=true 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item selected=false 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item selected=true 1`] = `
<li
  className="uu5-bricks-tree-item uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item style="padding:8px; borderRadius: 2px" 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item style={"backgroundColor":"red","color":"blue"} 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item textCorrector=false 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item textCorrector=true 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;

exports[`UU5.Bricks.Tree.Item tooltip="My Tooltip" 1`] = `
<li
  className="uu5-bricks-tree-item"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <Div
    className="uu5-bricks-tree-item-nav"
  >
    <Icon
      className="uu5-bricks-tree-item-icon-hidden"
    />
     
    <Span />
  </Div>
</li>
`;
